--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         type="text"
         placeholder="CPF"
         maxlength="14"
+        oninput="marcacao()"
       />
       <p class="paragrafo" id="valida"></p>
       <button class="button" onclick="validar()">validar</button>
